apply plugin: "java"
sourceSets.main.java.srcDirs = ["src/main/java"]

ext {
    jmeFastNoise = "[1.0,)"
    minieVersion = "7.4.0"
    lombokVersion = "1.18.20"
    simMathVersion = '1.5.0'
    sio2Version = '1.7.0'
    blocksVersion = "1.6.4"
    protobufVersion = "[3.10,)"
    jacksonVersion = "2.12.3"
    lemurprotoVersion = "[1.12,)"
    logbackVersion = "1.2.3"
}

dependencies {

    // physics
    implementation "com.github.stephengold:Minie:${minieVersion}"

    // utilities
    //noinspection AnnotationProcessorOnCompilePath
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.simsilica:sim-math:${simMathVersion}"
    implementation "com.simsilica:lemur-proto:${lemurprotoVersion}"

    // logging
    implementation "ch.qos.logback:logback-core:${logbackVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
    implementation "org.slf4j:jul-to-slf4j:1.7.36"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}